--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -11,7 +11,8 @@
 		--foreground-destructive: 345 82.7% 40.8%;
 
 		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
+		/* --foreground: 222.2 84% 4.9%; */
+		--foreground: 203, 20%, 18%;
 
 		--muted: 210 40% 93%;
 		--muted-foreground: 215.4 16.3% 30%;
@@ -33,7 +34,7 @@
 		--secondary-foreground: 222.2 47.4% 11.2%;
 
 		--accent: 210 40% 90%;
-		--accent-foreground: 222.2 47.4% 11.2%;
+		--accent-foreground: 286, 100%, 78%;
 
 		--destructive: 0 70% 50%;
 		--destructive-foreground: 210 40% 98%;
