Blog page, contact page

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -67,10 +67,10 @@
 		--primary-foreground: 286 100% 78%;
 
 		--secondary: 217.2 20% 24%;
-		--secondary-foreground: 234 100% 50%;
+		--secondary-foreground: 210 97% 54%;
 
 		--accent: 210 40% 90%;
-		--accent-foreground: 286, 100%, 78%;
+		--accent-foreground: 286 100% 78%;
 
 		--destructive: 0 60% 40%;
 		--destructive-foreground: 0 85.7% 97.3%;
