Add landmark regions article

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -11,7 +11,7 @@
 		--foreground-destructive: 345 82.7% 40.8%;
 
 		--background: 0 0% 100%;
-		--foreground: 203, 20%, 18%;
+		--foreground: 203 20% 18%;
 
 		--muted: 210 11% 96%;
 		--muted-foreground: 216 5% 40%;
